correct instance name

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,10 +6,11 @@
             "request": "launch",
             "type": "al",
             "environmentType": "OnPrem",
-            "server": "http://localhost:8080/BC270/",
-            "serverInstance": "BC270",
+            "server": "http://localhost:8080/BC260_forex_bureau/",
+            "serverInstance": "BC260_forexbureau",
             "authentication": "Windows",
             "startupObjectId": 22,
+            "port": 7050,
             "startupObjectType": "Page",
             "breakOnError": "All",
             "launchBrowser": true,
