correct instance name

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,8 +6,8 @@
             "request": "launch",
             "type": "al",
             "environmentType": "OnPrem",
-            "server": "http://localhost:8080/BC260_forex_bureau/",
-            "serverInstance": "BC260_forex_bureau",
+            "server": "http://localhost:8080/BC260_forexbureau/",
+            "serverInstance": "BC260_forexbureau",
             "authentication": "Windows",
             "startupObjectId": 22,
             "port": 7050,
